crates/spicy_parser/src/snapshots/spicy_parser__instance_parser__tests__parser-basic_op.snap
---
source: crates/spicy_parser/src/instance_parser.rs
expression: deck
---
Deck {
    title: "basic operating point",
    node_mapping: NodeMapping {
        nodes: [
            NodeName(
                "0",
            ),
            NodeName(
                "in",
            ),
            NodeName(
                "out",
            ),
        ],
    },
    commands: [
        Op(
            OpCommand {
                span: Span {
                    start: 63,
                    end: 65,
                    source_index: SourceFileId(
                        0,
                    ),
                },
            },
        ),
    ],
    devices: Devices {
        resistors: [
            ResistorSpec {
                name: "R1",
                span: Span {
                    start: 22,
                    end: 34,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 10.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                    },
                ),
                model: None,
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ],
        capacitors: [
            CapacitorSpec {
                name: "C1",
                span: Span {
                    start: 51,
                    end: 61,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    2,
                ),
                negative: NodeIndex(
                    0,
                ),
                capacitance: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: Some(
                            Micro,
                        ),
                    },
                ),
                model: None,
                mname: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                ic: None,
            },
        ],
        inductors: [],
        diodes: [],
        voltage_sources: [],
        current_sources: [
            IndependentSourceSpec {
                name: "I1",
                positive: NodeIndex(
                    2,
                ),
                negative: NodeIndex(
                    0,
                ),
                dc: Some(
                    Constant(
                        Value {
                            value: 1.0,
                            exponent: None,
                            suffix: Some(
                                Milli,
                            ),
                        },
                    ),
                ),
                ac: None,
            },
        ],
        bjts: [],
    },
}
